[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-uuid"
version = "0.1.0"
description = "A pytest plugin for mocking uuid.uuid4() calls"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Jason", email = "jason@example.com" },
]
keywords = ["pytest", "plugin", "uuid", "mock", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "nox",
    "nox-uv",
    "ruff",
    "twine",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/jason/pytest-uuid"
Repository = "https://github.com/jason/pytest-uuid"
Issues = "https://github.com/jason/pytest-uuid/issues"

[project.entry-points.pytest11]
uuid = "pytest_uuid.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_uuid"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pytest_uuid"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
