[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project]
name = "pytest-uuid"
version = "0.1.0"
description = "A pytest plugin for mocking uuid.uuid4() calls"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "CaptainDriftwood" },
]
keywords = ["pytest", "plugin", "uuid", "mock", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Software Development :: Testing :: Unit",
]
dependencies = [
    "pytest>=7.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "nox",
    "nox-uv",
    "ruff",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/CaptainDriftwood/pytest-uuid"
Documentation = "https://github.com/CaptainDriftwood/pytest-uuid#readme"
Repository = "https://github.com/CaptainDriftwood/pytest-uuid"
Issues = "https://github.com/CaptainDriftwood/pytest-uuid/issues"

[project.entry-points.pytest11]
uuid = "pytest_uuid.plugin"

# uv_build auto-detects src/ layout

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pytest_uuid"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["src/pytest_uuid"]
branch = true
parallel = true
patch = ["subprocess"]
sigterm = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "\\.\\.\\.",
]
show_missing = true
